# python_for_data_science

Py-0/ex00/: Hello.py
Py-0/ex01/: format_ft_time.py
Py-0/ex02/: find_ft_type.py
Py-0/ex03/: NULL_not_found.py
Py-0/ex04/: whatis.py
Py-0/ex05/: building.py
Py-0/ex06/: ft_filter.py  ft_filterstring.py
Py-0/ex07/: sos.py
Py-0/ex08/: Loading.py
Py-0/ex09/: LICENSE  pyproject.toml
Py-0/ex09/src/ex_package_lmenoni/: package.py
